UPDATE: Added pods to test functions and adjusted logic.
Imported OHHTTPStubs to test consumptions and parsing. Adjusted code logic due to previous incorrect parsing. Consumption tests added.

--- a/Concurrent API Calls/Podfile
+++ b/Concurrent API Calls/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '17.0'
 
 target 'Concurrent API Calls' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -9,6 +9,7 @@ target 'Concurrent API Calls' do
 
   pod 'Alamofire'
   pod 'SwiftSoup'
+  pod 'OHHTTPStubs/Swift'
 
   target 'Concurrent API CallsTests' do
     inherit! :search_paths
